# kokoro-agent-tts

./: .gitignore  LICENSE  README.md  agent_tts.bat  clip_tts.py  config.json  pyproject.toml  run.bat  setup.bat
.agents/: .gitignore.snippet  README.md
.agents/.agents/rules/: tts-response-always-on.md
.agents/.agents/skills/tts-response/scripts/: invoke-tts.ps1  tts.config.psd1
.agents/skills/tts-response/: SKILL.md
.agents/skills/tts-response/references/: tts-format.md
.agents/skills/tts-response/scripts/: invoke-tts.ps1  tts.config.psd1
.agents/workflows/: speak-response.md
model/: kokoro_vi.pth
model/voicepacks/: diem_trinh.pt  hung_thinh.pt  manh_dung.pt  ngoc_huyen.pt  thanh_dat.pt  tuan_ngoc.pt
src/: config_manager.py  health_checker.py  history_manager.py  install_pytorch.py  kokoro_wrapper.py  script_editor.py  tts_engine.py  web_fetcher.py
voicepacks/: custom_voice_1717_89.58_0.84_target.pt
