[project]
name = "web-to-audio-server"
version = "1.0.0"
description = "FastAPI Backend Server cho Web-to-Audio Converter"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "edge-tts>=6.1.3",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.6",
    # AI dependencies
    "kokoro-vietnamese",
    "torch",
    "torchvision",
    "torchaudio",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
kokoro-vietnamese = { git = "https://github.com/iamdinhthuan/Kokoro-Vietnamese.git" }
